kubernetes/templates/deployment-helloworld.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 3
  template:
  metadata:
    labels:
      app: helloworld
  spec:
    containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo
        ports:
          - containerPort: 3000
