kubernetes/templates/deployments-v10.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: simple-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
      - name: simple
        image: mhausenblas/simpleservice:0.5.0
        ports:
        - containerPort: 9876
